# copy-catcher-old

./: .gitignore  Cargo.toml
crates/debug/: Cargo.toml
crates/debug/src/: lib.rs
crates/verifier/: Cargo.toml
crates/verifier/src/: files.rs  lib.rs
scripts/: generate_discrepancies.py
src/: bin.rs  lib.rs  load_handler.rs  main.rs
src/resources/css/: main.css  utils.css
src/resources/css/theme/: nord.css
src/resources/html/: index.htm  result.htm
src/resources/tis/: bar.tis  main.tis  result.tis  verifier.tis
utils/darwin/: package.sh
utils/darwin-cross/: package.sh
utils/darwin/package/: Info.plist
utils/linux/: build.sh  package.sh
utils/linux/package/: install.sh  uninstall.sh
utils/windows/: build.sh  package.sh
