[package]
name = "copy-catcher"
version = "0.1.0"
authors = ["pchan"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "copy-catcher"
path = "src/bin.rs"

[dependencies]
debug = { path = "crates/debug" }
sciter-rs = "*"
verifier = { path = "crates/verifier" }

[workspace]
members = [
    "crates/debug",
    "crates/verifier"
]
